# server/api/api_grpc.pb.go
@@ -26,6 +26,7 @@ type GreeterClient interface {
 	CreateCollection(ctx context.Context, in *Collection, opts ...grpc.CallOption) (*CreateCollectionReply, error)
 	ListCollection(ctx context.Context, in *ListCollectionRequest, opts ...grpc.CallOption) (*ListCollectionReply, error)
 	GetCollection(ctx context.Context, in *GetCollectionRequest, opts ...grpc.CallOption) (*Collection, error)
+	UserCollection(ctx context.Context, in *UserCollectionRequest, opts ...grpc.CallOption) (*UserCollectionReply, error)
 }
 
 type greeterClient struct {
@@ -63,6 +64,15 @@ func (c *greeterClient) GetCollection(ctx context.Context, in *GetCollectionRequ
 	return out, nil
 }
 
+func (c *greeterClient) UserCollection(ctx context.Context, in *UserCollectionRequest, opts ...grpc.CallOption) (*UserCollectionReply, error) {
+	out := new(UserCollectionReply)
+	err := c.cc.Invoke(ctx, "/service.wireman.Greeter/UserCollection", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // GreeterServer is the server API for Greeter service.
 // All implementations must embed UnimplementedGreeterServer
 // for forward compatibility
@@ -71,6 +81,7 @@ type GreeterServer interface {
 	CreateCollection(context.Context, *Collection) (*CreateCollectionReply, error)
 	ListCollection(context.Context, *ListCollectionRequest) (*ListCollectionReply, error)
 	GetCollection(context.Context, *GetCollectionRequest) (*Collection, error)
+	UserCollection(context.Context, *UserCollectionRequest) (*UserCollectionReply, error)
 	mustEmbedUnimplementedGreeterServer()
 }
 
@@ -86,6 +97,9 @@ func (UnimplementedGreeterServer) ListCollection(context.Context, *ListCollectio
 }
 func (UnimplementedGreeterServer) GetCollection(context.Context, *GetCollectionRequest) (*Collection, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetCollection not implemented")
+}
+func (UnimplementedGreeterServer) UserCollection(context.Context, *UserCollectionRequest) (*UserCollectionReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method UserCollection not implemented")
 }
 func (UnimplementedGreeterServer) mustEmbedUnimplementedGreeterServer() {}
 
@@ -154,6 +168,24 @@ func _Greeter_GetCollection_Handler(srv interface{}, ctx context.Context, dec fu
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Greeter_UserCollection_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UserCollectionRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(GreeterServer).UserCollection(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/service.wireman.Greeter/UserCollection",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(GreeterServer).UserCollection(ctx, req.(*UserCollectionRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // Greeter_ServiceDesc is the grpc.ServiceDesc for Greeter service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -172,6 +204,10 @@ var Greeter_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GetCollection",
 			Handler:    _Greeter_GetCollection_Handler,
+		},
+		{
+			MethodName: "UserCollection",
+			Handler:    _Greeter_UserCollection_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
